package thuchanh.review.strategy;

public interface IKhuyenMaiStrategy {
    double TinhTienGiam(double tongTien);
}
