package thuchanh.review.strategy;

public interface IThanhToanStrategy {
    void thanhToan(double soTienCanThanhToan);
}
